--- a/pages/collection-pc.html
+++ b/pages/collection-pc.html
@@ -14,10 +14,10 @@
 <div class="labelholder">
 <div class="button-group2 filters-button-group">
   <button class="button2 is-checked" data-filter="*">show all</button>
-  <button class="button2 release" data-filter=".owned">owned</button>  
-  <button class="button2 release" data-filter=".priority">priority wtb</button>  
-  <button class="button2 release" data-filter=".iso">iso/wtb</button>  
-  <button class="button2 release" data-filter=".wtt">wtt</button>  
+  <button class="button2 release" data-filter=".owned">&check; — owned</button>  
+  <button class="button2 release" data-filter=".priority">&#9888; — priority wtb</button>  
+  <button class="button2 release" data-filter=".iso"> &cross; — iso/wtb</button>  
+  <button class="button2 release" data-filter=".wtt">&laquo; — wtt</button>  
   <button class="button2 type" data-filter="inclusion">album</button>  
   <button class="button2 type" data-filter="pob">POB</button>  
   <button class="button2 type" data-filter="etc">non-album</button>  
@@ -36,11 +36,8 @@
   <button class="button2 billlie" data-filter=".sheon"> sheon</button>  
   <button class="button2 billlie" data-filter=".siyoon"> siyoon</button>  
   <button class="button2 billlie" data-filter=".haruna"> haruna</button>
-  <button class="button2"> &check; — owned </button>
   <button class="button2"> &#10148; — otw </button>
-  <button class="button2"> &cross; — not owned </button>
-  <button class="button2"> &#9888; — priority </button>
-  <button class="button2"> &laquo; — dupe, willing to trade </button>
+  
 
 </div>
   </div>
@@ -60,11 +57,11 @@
     <q class="type">inclusion</q>
   </div>  
   </div>
-  <div class="photocard rky spring iso priority" data-category="mini">
+  <div class="photocard rky spring owned" data-category="mini">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/spring-2.png" />
     <div class="details">
     <q class="albumtitle">spring up</q>
-    <q class="status"> &#9888; </q><q class="status"> &cross; </q>
+    <q class="status"> &#10148; </q><q class="status"> &check; </q>
     <q class="year">2016</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
@@ -132,11 +129,11 @@
     <q class="type">inclusion</q>
     </div>
   </div>
-  <div class="photocard rky summer iso" data-category="mini">
+  <div class="photocard rky summer owned" data-category="mini">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/summer-2.png" />
     <div class="details">
     <q class="albumtitle">summer vibes</q>
-    <q class="status"> &cross; </q>
+    <q class="status"> &check; </q> <q class="status"> &#10148; </q>
     <q class="year">2016</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
@@ -362,11 +359,11 @@
   </div>  
   </div>
 
-      <div class="photocard rky dream02 iso" data-category="mini">
+      <div class="photocard rky dream02 owned" data-category="mini">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/dream2-1.png" />
     <div class="details">
     <q class="albumtitle">dream 02</q>
-    <q class="status"> &cross; </q>
+    <q class="status"> &check; </q> <q class="status"> &#10148; </q>
     <q class="year">2017</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
@@ -439,11 +436,11 @@
       <q class="type">inclusion</q>
   </div>
   </div>
-      <div class="photocard rky dream02 iso" data-category="mini">
+      <div class="photocard rky dream02 owned" data-category="mini">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/dream02-pola-2.png" />
     <div class="details">
     <q class="albumtitle">dream 02</q>
-    <q class="status"> &cross; </q>
+    <q class="status"> &check; </q>
     <q class="year">2017</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
@@ -3037,11 +3034,11 @@
     <q class="type">etc</q>
   </div>  
   </div>
-<div class="photocard rky iso" data-category="etc">
+<div class="photocard rky owned" data-category="etc">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/etc-aroha2-1.png">
     <div class="details">
     <q class="albumtitle">AROHA 2</q>
-    <q class="status">&cross; </q>
+    <q class="status">&check; </q> <q class="status"> &#10148; </q>
     <q class="year">2017</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
@@ -3137,22 +3134,22 @@
     <q class="type">etc</q>
   </div>  
   </div>
-<div class="photocard rky iso" data-category="etc">
+<div class="photocard rky owned" data-category="etc">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/etc-astroad-seoul-1.png">
     <div class="details">
     <q class="albumtitle">astroad seoul</q>
-    <q class="status">&cross; </q>
+    <q class="status">&check; </q> <q class="status"> &#10148; </q>
     <q class="year">2017</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
     <q class="type">etc</q>
   </div>  
   </div>
-<div class="photocard rky iso priority" data-category="etc">
+<div class="photocard rky owned" data-category="etc">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/etc-astroad1-seoul-2.png">
     <div class="details">
     <q class="albumtitle">astroad seoul</q>
-      <q class="status">&cross; </q> <q class="status">&#9888;  </q>
+      <q class="status">&check; </q> <q class="status">&#10148; </q>
     <q class="year">2017</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
@@ -3225,22 +3222,22 @@
     <q class="type">etc</q>
   </div>  
   </div>
-<div class="photocard rky iso" data-category="etc">
+<div class="photocard rky owned" data-category="etc">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/etc-astroad2-seoul-4.png">
     <div class="details">
     <q class="albumtitle">astroad seoul 2</q>
-    <q class="status">&cross; </q>
+    <q class="status">&check; </q> <q class="status"> &#10148; </q>
     <q class="year">2016</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
     <q class="type">etc</q>
   </div>  
   </div>
-<div class="photocard rky iso" data-category="etc">
+<div class="photocard rky owned" data-category="etc">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/etc-astroad2-seoul-5.png">
     <div class="details">
     <q class="albumtitle">astroad seoul 2</q>
-    <q class="status">&cross; </q>
+    <q class="status">&check; </q> <q class="status"> &#10148; </q>
     <q class="year">2019</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
@@ -3436,33 +3433,33 @@
     <q class="type">etc</q>
   </div>  
   </div>
-<div class="photocard rky iso" data-category="etc">
+<div class="photocard rky owned" data-category="etc">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/etc-ordinaryholiday-1.png">
     <div class="details">
     <q class="albumtitle">ordinary holiday</q>
-      <q class="status">&cross;</q>
+      <q class="status">&check;</q> <q class="status"> &#10148; </q>
     <q class="year">2019</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
     <q class="type">etc</q>
   </div>  
   </div>
-<div class="photocard rky iso" data-category="etc">
+<div class="photocard rky iso priority" data-category="etc">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/etc-ordinaryholiday-2.png">
     <div class="details">
     <q class="albumtitle">ordinary holiday</q>
-      <q class="status">&cross;</q>
+      <q class="status">&cross;</q> <q class="status"> &#9888; </q>
     <q class="year">2019</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
     <q class="type">etc</q>
   </div>  
   </div>
-<div class="photocard rky iso" data-category="etc">
+<div class="photocard rky iso priority" data-category="etc">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/etc-ordinaryholiday-fs.png">
     <div class="details">
     <q class="albumtitle">ordinary holiday</q>
-      <q class="status">&cross;</q>
+      <q class="status">&cross;</q> <q class="status"> &#9888; </q>
     <q class="year">2019</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
@@ -3690,22 +3687,22 @@
     <q class="type">etc</q>
   </div>  
   </div>
-<div class="photocard rky iso" data-category="etc">
+<div class="photocard rky owned" data-category="etc">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/etc-sg20-1.png">
     <div class="details">
     <q class="albumtitle">SG20</q>
-      <q class="status">&cross;</q>
+      <q class="status">&check;</q> <q class="status"> &#10148; </q>
     <q class="year">2020</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
     <q class="type">etc</q>
   </div>  
   </div>
-<div class="photocard rky iso" data-category="etc">
+<div class="photocard rky owned" data-category="etc">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/etc-sg20-2.png">
     <div class="details">
     <q class="albumtitle">SG20</q>
-      <q class="status">&cross;</q>
+      <q class="status">&check;</q> <q class="status"> &#10148; </q>
     <q class="year">2020</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
@@ -3723,22 +3720,22 @@
     <q class="type">etc</q>
   </div>  
   </div>
-<div class="photocard rky iso" data-category="etc">
+<div class="photocard rky owned" data-category="etc">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/etc-sg21-2.png">
     <div class="details">
     <q class="albumtitle">SG21</q>
-      <q class="status">&cross; </q>
+      <q class="status">&check; </q>  <q class="status"> &#10148; </q>
     <q class="year">2021</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
     <q class="type">etc</q>
   </div>  
   </div>
-<div class="photocard rky owned" data-category="etc">
+<div class="photocard rky iso priority" data-category="etc">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/etc-sg21-3.png">
     <div class="details">
     <q class="albumtitle">SG21</q>
-      <q class="status">&check;</q> 
+      <q class="status">&cross;</q>  <q class="status"> &#9888; </q>
     <q class="year">2021</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
@@ -3749,7 +3746,7 @@
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/etc-sg21-4.png">
     <div class="details">
     <q class="albumtitle">SG21</q>
-      <q class="status">&check;</q> 
+      <q class="status">&check;</q> <q class="status"> &#10148; </q>
     <q class="year">2018</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
