--- a/pages/collection-pc.html
+++ b/pages/collection-pc.html
@@ -414,11 +414,11 @@
     <q class="type">inclusion</q>
     </div>
   </div>
-      <div class="photocard rky dream02 iso" data-category="mini">
+      <div class="photocard rky dream02 owned" data-category="mini">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/dream2-6.png" />
     <div class="details">
     <q class="albumtitle">dream 02</q>
-    <q class="status"> &cross; </q>
+   <q class="status"> &check; </q> <q class="status"> &#10148; </q>
     <q class="year">2017</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
@@ -440,7 +440,7 @@
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/dream02-pola-2.png" />
     <div class="details">
     <q class="albumtitle">dream 02</q>
-    <q class="status"> &check; </q>
+   <q class="status"> &check; </q> <q class="status"> &#10148; </q>
     <q class="year">2017</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
@@ -473,7 +473,7 @@
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/riseup-1.png" />
     <div class="details">
     <q class="albumtitle">rise up</q>
-    <q class="status">&check;</q><q class="status"> &#10148; </q>
+    <q class="status">&check;</q>
     <q class="year">2018</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
@@ -718,11 +718,11 @@
     <q class="type">inclusion</q>
     </div>
   </div>
-      <div class="photocard rky gateway iso" data-category="mini">
+      <div class="photocard rky gateway owned" data-category="mini">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/gateway-3.png" />
     <div class="details">
     <q class="albumtitle">gateway</q>
-    <q class="status"> &cross; </q>
+   <q class="status"> &check; </q> 
     <q class="year">2020</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
@@ -2722,7 +2722,7 @@
    <q class="company">makestar</q>
     </div>
     </div>
-      <div class="photocard jinu rky restire owned" data-category="minisub">
+      <div class="photocard jinu rky restore owned" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-mds-1.png">
  <div class="details">
     <q class="albumtitle">restore</q>
@@ -2735,11 +2735,11 @@
    <q class="company"> md</q>
     </div>
     </div>
-      <div class="photocard jinu rky restire iso priority" data-category="minisub">
+      <div class="photocard jinu rky restore owned" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-mdv-1.png">
  <div class="details">
     <q class="albumtitle">restore</q>
-   <q class="status"> &cross; </q> <q class="status"> &#9888;</q>
+   <q class="status"> &check; </q> 
     <q class="year">2022</q>
     <q class="group">astro</q>
     <q class="member"> jinjin </q>
@@ -2796,11 +2796,11 @@
    <q class="company">withdrama</q>
     </div>
     </div>
-    <div class="photocard rky restore iso priority" data-category="minisub">
+    <div class="photocard rky restore owned" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-withdrama2-1.png">
  <div class="details">
     <q class="albumtitle">restore</q>
-   <q class="status"> &cross; </q> <q class="status"> &#9888; </q>
+   <q class="status"> &check; </q> <q class="status"> &#10148; </q>
     <q class="year">2022</q>
     <q class="group">astro</q>
     <q class="member"> rocky </q>
@@ -2808,11 +2808,11 @@
    <q class="company">withdrama</q>
     </div>
     </div>
-    <div class="photocard rky restore iso priority" data-category="minisub">
+    <div class="photocard rky restore owned" data-category="minisub">
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/restore-withdrama2-2.png">
  <div class="details">
     <q class="albumtitle">restore</q>
-   <q class="status"> &cross; </q> <q class="status"> &#9888; </q>
+   <q class="status"> &check; </q> <q class="status"> &#10148; </q>
     <q class="year">2022</q>
     <q class="group">astro</q>
     <q class="member"> rocky </q>
@@ -3691,7 +3691,7 @@
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/etc-sg20-1.png">
     <div class="details">
     <q class="albumtitle">SG20</q>
-      <q class="status">&check;</q> <q class="status"> &#10148; </q>
+   <q class="status"> &check; </q> <q class="status"> &#10148; </q>
     <q class="year">2020</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
@@ -3702,7 +3702,7 @@
 <img src="https://chikorakii.github.io/chikorakii/assets/pc/etc-sg20-2.png">
     <div class="details">
     <q class="albumtitle">SG20</q>
-      <q class="status">&check;</q> <q class="status"> &#10148; </q>
+   <q class="status"> &check; </q> <q class="status"> &#10148; </q>
     <q class="year">2020</q>
     <q class="group">astro</q>
     <q class="member">rocky</q>
