--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 I collect Rocky, my favorite ASTRO pairing is Binhyuk (with Myunghyuk a close second), and I support OT6 unconditionally~</p>
         <div class="linkbox">
           <a href="/chikorakii/pages/buy-sell-trade.html">buy, sell, trade</a>
+          <a href="https://qfreeaccountssjc1.az1.qualtrics.com/jfe/form/SV_72qMTF1SxWLdUbk"> DTTSR Dear My Muse 1:1 GO </a>
           <a href="https://forms.gle/Arg7DcpfVEDTWXe4A">roroha stickers</a>
           <a href="https://forms.gle/Sj7JCCMAkTQfmfcW9">jinrock wonderwall GO </a>
           <a href="/chikorakii/pages/collection-albums.html">album collection</a>
