--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
 I collect Rocky, my favorite ASTRO pairing is Binhyuk (with Myunghyuk a close second), and I support OT6 unconditionally~</p>
         <div class="linkbox">
           <a href="/chikorakii/pages/buy-sell-trade.html">buy, sell, trade</a>
-          <a href="https://qfreeaccountssjc1.az1.qualtrics.com/jfe/form/SV_72qMTF1SxWLdUbk"> DTTSR Dear My Muse 1:1 GO </a>
-          <a href="https://forms.gle/Arg7DcpfVEDTWXe4A">roroha stickers</a>
-          <a href="https://forms.gle/Sj7JCCMAkTQfmfcW9">jinrock wonderwall GO </a>
+          <a href="https://www.notion.so/Chikorakii-Group-Orders-7331a8f8a94047f8852895d3c312714c"> GROUP ORDERS </a>
+          <a href="https://chikorakii.bigcartel.com/">roroha stickers</a>
           <a href="/chikorakii/pages/collection-albums.html">album collection</a>
           <a href="/chikorakii/pages/collection-pc.html">pc collection</a>
         </div>
