--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 I collect Rocky, my favorite ASTRO pairing is Binhyuk (with Myunghyuk a close second), and I support OT6 unconditionally~</p>
         <div class="linkbox">
           <a href="/chikorakii/pages/buy-sell-trade.html">buy, sell, trade</a>
-          <a href="https://www.notion.so/Chikorakii-Group-Orders-7331a8f8a94047f8852895d3c312714c"> GROUP ORDERS </a>
+          <a href="https://equinox-gooseberry-028.notion.site/Chikorakii-Group-Orders-7331a8f8a94047f8852895d3c312714c"> group orders </a>
           <a href="https://chikorakii.bigcartel.com/">roroha stickers</a>
           <a href="/chikorakii/pages/collection-albums.html">album collection</a>
           <a href="/chikorakii/pages/collection-pc.html">pc collection</a>
