--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ I collect Rocky, my favorite ASTRO pairing is Binhyuk (with Myunghyuk a close se
           <a href="https://chikorakii.bigcartel.com/">roroha stickers</a>
           <a href="/chikorakii/pages/collection-albums.html">album collection</a>
           <a href="/chikorakii/pages/collection-pc.html">pc collection</a>
+<a href="https://equinox-gooseberry-028.notion.site/a46b8b961cdc48e18ecc677b0be53172?v=5e2580a866cd43cd877931b960e02b67">astro live shows</a>
         </div>
       </div>
     </div>
