--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         </p><p>
 I collect Rocky, my favorite ASTRO pairing is Binhyuk (with Myunghyuk a close second), and I support OT6 unconditionally~</p>
         <div class="linkbox">
-          <a href="/chikorakii/pages/buy-sell-trade.html">buy, sell, trade</a>
+          <a href="/chikorakii/pages/buy-sell-trade.html">buy & trade</a>
           <a href="https://equinox-gooseberry-028.notion.site/Chikorakii-Group-Orders-7331a8f8a94047f8852895d3c312714c"> group orders </a>
           <a href="https://chikorakii.bigcartel.com/">roroha stickers</a>
           <a href="/chikorakii/pages/collection-albums.html">album collection</a>
           <a href="/chikorakii/pages/collection-pc.html">pc collection</a>
-<a href="https://equinox-gooseberry-028.notion.site/a46b8b961cdc48e18ecc677b0be53172?v=5e2580a866cd43cd877931b960e02b67">astro live shows</a>
+<a href="https://equinox-gooseberry-028.notion.site/a46b8b961cdc48e18ecc677b0be53172?v=5e2580a866cd43cd877931b960e02b67">astro shows</a>
         </div>
       </div>
     </div>
